--- a/_publications/cvmp_2021.md
+++ b/_publications/cvmp_2021.md
@@ -3,7 +3,7 @@ title: "Depth Estimation from a Single Omnidirectional Image Using Domain Adapta
 collection: publications
 permalink: /publication/2021-cvmp_depth
 date: 2021
-venue: 'CVMP2021
+venue: 'CVMP2021'
 link: 'https://dl.acm.org/doi/abs/10.1145/3485441.3485649'
 paperurl: '/files/pdf/publications/CVMP_2021.pdf'
 citation: 'Wu, Y., Heng, Y., Niranjan, M., & Kim, H. (2021, December). Depth estimation from a single omnidirectional image using domain adaptation. In <i>European Conference on Visual Media Production</i> (pp. 1-9).'
