--- a/_publications/cvmp_2021.md
+++ b/_publications/cvmp_2021.md
@@ -2,7 +2,7 @@
 title: "Depth Estimation from a Single Omnidirectional Image Using Domain Adaptation"
 collection: publications
 permalink: /publication/2021-cvmp_depth
-date: 2021
+date: 2021-12-06
 venue: 'CVMP2021'
 link: 'https://dl.acm.org/doi/abs/10.1145/3485441.3485649'
 paperurl: '/files/pdf/publications/CVMP_2021.pdf'
