--- a/_publications/cvmp_2021.md
+++ b/_publications/cvmp_2021.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/2021-cvmp_depth
 date: 2021-12-06
 venue: 'CVMP2021'
-link: 'https://doi.org/10.1145/3485441.3485649'
+link: 'https://dl.acm.org/doi/abs/10.1145/3485441.3485649'
 paperurl: '/files/pdf/publications/CVMP_2021.pdf'
-citation: 'Yihong Wu, Yuwen Heng, Mahesan Niranjan, and Hansung Kim. 2021. Depth Estimation from a Single Omnidirectional Image using Domain Adaptation. In <i>European Conference on Visual Media Production (CVMP '21). Association for Computing Machinery</i>, New York, NY, USA, Article 3, 1–9.'
+citation: 'Wu, Y., Heng, Y., Niranjan, M., & Kim, H. (2021, December). Depth estimation from a single omnidirectional image using domain adaptation. In <i>European Conference on Visual Media Production</i> (pp. 1-9).'
 ---
