Add info about the first blog

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,17 +1,15 @@
 ---
-title: 'Blog Post number 1'
+title: 'Computer Vision: a beginner's guide'
 date: 2012-08-14
-permalink: /posts/2012/08/blog-post-1/
+permalink: /posts/2022/11/cv_starter/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - Computer Vision
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+This is a blog for students who want to step into the realm of computer vision.
 
-Headings are cool
-======
+## Reading List
+Szeliski, R. (2021). [Computer vision: algorithms and applications](https://szeliski.org/Book/). 
 
 You can have many headings
 ======
