Update new publication

--- a/_publications/bmvc2022.md
+++ b/_publications/bmvc2022.md
@@ -1,5 +1,5 @@
 ---
-title: "CAM-SegNet: A Context-Aware Dense Material Segmentation Network for Sparsely Labelled Datasets"
+title: "Enhancing Material Features Using Dynamic Backward Attention on Cross-Resolution Patches"
 collection: publications
 permalink: /publication/bmvc-2022
 date: 2022-02-06
