--- a/_publications/bmvc2022.md
+++ b/_publications/bmvc2022.md
@@ -6,6 +6,6 @@ date: 2022-02-06
 venue: '17th International Conference on Computer Vision Theory and Applications'
 link: 'https://bmvc2022.mpi-inf.mpg.de/4/'
 paperurl: 'https://bmvc2022.mpi-inf.mpg.de/0004.pdf'
-citation: 'Y. Heng, Y. Wu, S. Dasmahapatra, and H. Kim. Enhancing material features using dynamic backward attention on cross-resolution patches. In <i> 33rd British Machine Vision Conference 2022, BMVC 2022, London, UK, November 21-24, </i> 2022. BMVA Press'
+citation: 'Y. Heng, Y. Wu, S. Dasmahapatra, and H. Kim. Enhancing material features using dynamic backward attention on cross-resolution patches. In <i> 33rd British Machine Vision Conference 2022, BMVC 2022, London, UK, November 21-24, </i> 2022. BMVA Press.'
 ---
  
