Update new publication

--- a/_publications/bmvc2022.md
+++ b/_publications/bmvc2022.md
@@ -2,8 +2,8 @@
 title: "Enhancing Material Features Using Dynamic Backward Attention on Cross-Resolution Patches"
 collection: publications
 permalink: /publication/bmvc-2022
-date: 2022-02-06
-venue: '17th International Conference on Computer Vision Theory and Applications'
+date: 2022-11-21
+venue: '33rd British Machine Vision Conference 2022'
 link: 'https://bmvc2022.mpi-inf.mpg.de/4/'
 paperurl: 'https://bmvc2022.mpi-inf.mpg.de/0004.pdf'
 citation: 'Y. Heng, Y. Wu, S. Dasmahapatra, and H. Kim. Enhancing material features using dynamic backward attention on cross-resolution patches. In <i> 33rd British Machine Vision Conference 2022, BMVC 2022, London, UK, November 21-24, </i> 2022. BMVA Press.'
