--- a/_publications/cvmp_2021.md
+++ b/_publications/cvmp_2021.md
@@ -6,5 +6,5 @@ date: 2021-12-06
 venue: 'CVMP2021'
 link: 'https://dl.acm.org/doi/abs/10.1145/3485441.3485649'
 paperurl: '/files/pdf/publications/CVMP_2021.pdf'
-citation: 'Wu, Y., Heng, Y., Niranjan, M., & Kim, H. (2021, December). Depth estimation from a single omnidirectional image using domain adaptation. In <i>Proceedings of the 18th European Conference on Visual Media Production</i> (pp. 1-9).'
+citation: 'Y. Wu, Y. Heng, M. Niranjan, and H. Kim. Depth estimation from a single omnidirectional image using domain adaptation. In European Conference on Visual Media Production, CVMP ’21. Association for Computing Machinery, New York, NY, USA, 2021.'
 ---
